# robotics-fullstack-lab

./: .gitignore  README.md  requirements.txt
ros2_ws/src/control/: CMakeLists.txt  package.xml
ros2_ws/src/control/config/: control_params.yaml
ros2_ws/src/control/launch/: control.launch.py
ros2_ws/src/control/src/: control_node.cpp  pid_controller.cpp  pid_controller.hpp  pure_pursuit.cpp  pure_pursuit.hpp
ros2_ws/src/sim/: package.xml  setup.cfg  setup.py  test_controller.py
ros2_ws/src/sim/config/: sim.rviz
ros2_ws/src/sim/launch/: sim_launch.py
ros2_ws/src/sim/src/: ros2_sim_node.py  simulation.py
ros2_ws/src/tuning/config/: tuning_config.yaml
ros2_ws/src/tuning/src/: __init__.py  controllers.py  cost_function.py  optuna_tuner.py  paths.py  sim_runner.py  visualize.py
